<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="50.0sp" android:id="@id/about_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        <TextView android:textSize="20.0sp" android:id="@id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dummy_version" />
        <TextView android:textSize="30.0sp" android:id="@id/about_author" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author" />
        <TextView android:id="@id/about_gpl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gpl_notice" android:drawablePadding="5.0px" />
    </LinearLayout>
</ScrollView>