<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawablePadding="10.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <CheckBox android:id="@id/screen_on_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screen_on_label" />
        <CheckBox android:id="@id/airplane_mode_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airplane_mode_label" />
        <CheckBox android:id="@id/silent_mode_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_mode_label" />
        <CheckBox android:id="@id/maximize_volume_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maximize_volume_label" />
    </LinearLayout>
</LinearLayout>